fix scrollbar style

--- a/assets/scss/doc.scss
+++ b/assets/scss/doc.scss
@@ -174,7 +174,7 @@ body {
         .inner-tree {
             max-height: 100%;
             position: relative;
-            overflow: scroll;
+            overflow-y: auto;
             background-color: #ffffff;
         }
 
@@ -601,7 +601,7 @@ body {
         .inner-div {
             max-height: 100%;
             position: relative;
-            overflow-y: scroll;
+            overflow-y: auto;
             padding-left: 10px;
             border-left: 1px solid #dde1e6;
         }
